test/type_error/classical_var_call.rqcpp
qbits q[1]

procedure P():
    x = 1
    x()

procedure main():
    P()